--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@nuxt/ui": "4.0.0",
         "@pinia/nuxt": "0.11.2",
         "@vueuse/nuxt": "13.9.0",
+        "@workos-inc/node": "^7.70.0",
         "date-fns": "^4.1.0",
         "drizzle-orm": "^0.44.6",
         "drizzle-zod": "^0.8.3",
